--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -13,7 +13,7 @@ email.activation.link=Activer votre compte
 email.payment.title=Confirmation du d\u00e9p\u00f4t de votre demande
 email.payment.greeting=Bonjour {0} {1},
 email.payment.done=Nous accusons r\u00e9ception de votre demande d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {0} \u00e0 {1}.
-email.payment.next=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande. Si votre dossier n\u2019est pas recevable, nous vous indiquerons les raisons et vous pr\u00e9ciserons le(s) \u00e9l\u00e9ment(s) manquant(s) le cas \u00e9ch\u00e9ant.
+email.payment.next=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande. Si votre dossier n\u2019est pas recevable, nous vous en indiquerons les raisons et vous pr\u00e9ciserons le(s) \u00e9l\u00e9ment(s) manquant(s) le cas \u00e9ch\u00e9ant.
 
 email.admissibility.title=Validation de la recevabilit\u00e9 de votre demande
 email.admissibility.greeting=Bonjour {0} {1},
@@ -31,7 +31,7 @@ email.permit.title=Disponibilit\u00e9 de votre carte de s\u00e9jour \u00e9tudian
 email.permit.greeting=Bonjour {0} {1},
 email.permit.text1=Votre titre de s\u00e9jour \u00e9tudiant est disponible \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul. Pour le r\u00e9cup\u00e9rer nous vous invitons \u00e0 vous pr\u00e9senter d\u00e8s \u00e0 pr\u00e9sent et sans rendez-vous \u00e0 l\u2019accueil de l\u2019Ambassade muni de votre pi\u00e8ce d\u2019identit\u00e9 :
 email.permit.text2=43-12 Seosomun-ro, Seodaemun-gu - SEOUL 03741 (120-030)
-email.permit.text3=Pour vous offrir les meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, vous devrez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
+email.permit.text3=Pour acc\u00e9der aux meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, vous devrez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
 email.permit.link=Confirmer mon arriv\u00e9e en France
 
 email.permit.renewal.text=Votre titre de s\u00e9jour \u00e9tudiant est disponible. Pour le r\u00e9cup\u00e9rer nous vous invitons \u00e0 vous pr\u00e9senter d\u00e8s \u00e0 pr\u00e9sent et sans rendez-vous \u00e0 XXX muni de votre pi\u00e8ce d\u2019identit\u00e9.
@@ -39,7 +39,7 @@ email.permit.renewal.text=Votre titre de s\u00e9jour \u00e9tudiant est disponibl
 email.arrival.title=Confirmation de votre arriv\u00e9e en France
 email.arrival.greeting=Bonjour {0} {1},
 email.arrival.text1=Nous esp\u00e9rons que votre installation en France se passe bien.
-email.arrival.text2=Pour vous offrir les meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, nous vous rappelons que vous devez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
+email.arrival.text2=Pour acc\u00e9der aux meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, nous vous rappelons que vous devez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
 email.arrival.link=Confirmer mon arriv\u00e9e en France
 
 email.renewal.title=Renouvellement de votre droit au s\u00e9jour
