--- a/src/main/webapp/i18n/en/control.json
+++ b/src/main/webapp/i18n/en/control.json
@@ -1,6 +1,6 @@
 {
     "control": {
-        "title": "Dashboard - {{userName}}",
+        "title": "Dashboard",
         "page.title": "Data analysis and control",
         "button": {
         	"back": "Back"
