--- a/src/main/webapp/i18n/en/project.json
+++ b/src/main/webapp/i18n/en/project.json
@@ -8,7 +8,8 @@
 			"trainingStart": "Traning start date",
 			"trainingLength": "Training lenght (month)",
 			"resourceType": "Resource type",
-			"resourceAmount": "Resource amount (euros)",
+			"resourceAmount.total": "Total resource amount (euros)",
+			"resourceAmount.monthly": "Monthly resource amount (euros)",
             "document.title": "Attach your documents",
             "resourceProof": "Resource proof",
             "resourceProof.placeholder": "Click or drag your proof here...",
