--- a/src/main/webapp/i18n/fr/control.json
+++ b/src/main/webapp/i18n/fr/control.json
@@ -1,6 +1,6 @@
 {
     "control": {
-        "title": "Tableau de bord - {{userName}}",
+        "title": "Tableau de bord",
         "page.title": "Analyse des données et pilotage",
         "button": {
         	"back": "Retour"
