--- a/src/main/webapp/i18n/fr/project.json
+++ b/src/main/webapp/i18n/fr/project.json
@@ -7,7 +7,8 @@
 			"trainingStart": "Date de début de la formation",
 			"trainingLength": "Durée de la formation (mois)",
 			"resourceType": "Type de ressource",
-			"resourceAmount": "Montant des ressources (euros)",
+			"resourceAmount.total": "Montant total des ressources (euros)",
+			"resourceAmount.monthly": "Montant mensuel des ressources (euros)",
             "document.title": "Joignez vos pièces justificatives",
             "resourceProof": "Preuve(s) de ressources",
             "resourceProof.placeholder": "Cliquer ou déposer vos preuves ici...",
