correction bug pieces justificatives + label

--- a/src/main/webapp/i18n/en/project.json
+++ b/src/main/webapp/i18n/en/project.json
@@ -19,7 +19,7 @@
             "inscriptionCertificate.tooltip": "Thank you to attach proof of registration or pre- registration with an educational institution",
             
             "resources": {
-            	"title": "Resources",
+            	"title": "Profesional situation",
             	"yes": "Yes, I authorize the administration of foreigners in France to get my supporting resource directly from URSSAF. I have then no supporting piece to attach to my request.",
             	"yes.done": "Data exchange with URSSAF authorized",
             	"no": "No, I want to justify myself by my resources. Then I have to join my request supporting documents requested of me.",
