--- a/src/main/webapp/i18n/fr/project.json
+++ b/src/main/webapp/i18n/fr/project.json
@@ -19,30 +19,30 @@
             
             "resources": {
             	"title": "Situation professionnelle",
-            	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes données directement auprès de l'URSSAF. Je n'ai alors pas de pièce justificatives à joindre à ma demande.",
-            	"yes.done": "Echange de données autorisé avec l'URSSAF",
-            	"no": "Non, je souhaite justifier par moi même de ma situation. Je dois alors joindre à ma demande les pièces justificatives qui me sont demandées.",
-            	"no.tooltip": "Le cas échéant, joindre : contrat de travail, attestations d'emplois antérieurs, attestation pôle emploi, 3 derniers bulletins de salaire, bulletins de salaire de novembre et décembre des 3 dernières années.",
-            	"workContract": "Contrat de travail",
+            	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes données directement auprès de l'administration compétente. Je n'ai alors pas de pièce justificatives à joindre à ma demande.",
+            	"yes.tooltip": "Les données échangées sont les suivantes : contrat de travail en cours, certificats de travail sur les trois dernières années, trois derniers bulletins de salaire",
+            	"yes.done": "Echange de données autorisé avec l'administration compétente",
+            	"no": "Non, je souhaite justifier par moi-même de ma situation. Je dois alors joindre à ma demande les pièces justificatives suivantes : ",
+            	"workContract": "Contrat de travail en cours",
             	"workContract.placeholder": "Cliquer ou déposer votre contrat ici...",
             	"workContract.tooltip": "...",
-            	"workCertificate": "Attestations d'emplois antérieurs",
-            	"workCertificate.placeholder": "Cliquer ou déposer votre attestation ici...",
+            	"workCertificate": "Certificats de travail sur les trois dernières années",
+            	"workCertificate.placeholder": "Cliquer ou déposer votre certificat ici...",
             	"workCertificate.tooltip": "...",
-            	"paySlip": "Bulletins de salaire",
+            	"paySlip": "Trois derniers bulletins de salaire",
             	"paySlip.placeholder": "Cliquer ou déposer votre bulletins ici...",
             	"paySlip.tooltip": "..."
             },
             "taxSituation": {
             	"title": "Situation fiscale",
-            	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes justificatifs fiscaux directement auprès des Finances Publiques. Je n'ai alors pas de pièce justificatives à joindre à ma demande.",
-            	"yes.done": "Echange de données autorisé avec les Finances Publiques",
-            	"no": "Non, je souhaite justifier de ma situation fiscale sans autoriser l'échange de mes informations avec le Ministère des Finances. Je dois alors joindre à ma demande les pièces justificatives qui me sont demandées.",
-            	"no.tooltip": "Le cas échéant, joindre : bordereau de situation fiscale P237 récent portant sur l'imposition des 3 dernières années et avis d'imposition des 3 derniers exercices.",
+            	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes données directement auprès de l'administration compétente. Je n'ai alors pas de pièces justificatives à joindre à ma demande.",
+            	"yes.tooltip": "Les données échangées sont les suivantes : revenus fiscaux de référence des trois derniers exercices, nombre de part(s) fiscale(s), revenus salarié, bordereau de situation fiscale",
+            	"yes.done": "Echange de données autorisé avec l'administration compétente",
+            	"no": "Non, je souhaite justifier par moi-même de ma situation. Je dois alors joindre à ma demande les pièces justificatives suivantes : ",
             	"taxSlip": "Bordereau de situation fiscale",
             	"taxSlip.placeholder": "Cliquer ou déposer votre bordereau ici...",
-            	"taxSlip.tooltip": "...",
-            	"taxNotice": "Avis d'imposition",
+            	"taxSlip.tooltip": "bordereau de situation fiscale P237 récent portant sur l'imposition des 3 dernières années",
+            	"taxNotice": "Avis d'imposition des trois derniers exercices",
             	"taxNotice.placeholder": "Cliquer ou déposer votre avis ici...",
             	"taxNotice.tooltip": "..."
             },
