--- a/src/main/webapp/i18n/en/identification.json
+++ b/src/main/webapp/i18n/en/identification.json
@@ -43,7 +43,7 @@
 		},
 		"interview": {
 			"report": "Interview report",
-			"button": "Submit interview report"
+			"button": "Save interview report"
 		}
 	}
 }
