--- a/src/main/webapp/i18n/fr/identification.json
+++ b/src/main/webapp/i18n/fr/identification.json
@@ -19,10 +19,8 @@
 	    	"inscriptionCertificate": "Certification de l'authenticité du certificat de (pré)inscription",
 	    	"resourceProof": "Certification de l'authenticité des preuves de ressources",
 	    	
-	    	"toCertify": "A certifier",
-	    	"certified": "Certifé",
-	    	
 	    	"button": {
+	    		"missing": "Déclarer un document manquant",
 	    		"accept": "Certifier l'authenticité des documents"
 	    	}
 		},
