correction pb document identity

--- a/src/main/webapp/i18n/en/validation.json
+++ b/src/main/webapp/i18n/en/validation.json
@@ -18,8 +18,7 @@
 	    	"history.list": "\"Student\" residency permit - du {{startDate}} au {{endDate}}",
 	    	"noHistory": "No history",
 	    	
-	    	"validate": "Validate on {{validationDate}} - {{validationAuthor}}",
-	    	"toValidate": "To validate"
+	    	"validate": "Validate on {{validationDate}} - {{validationAuthor}}"
 		}
 	}
 }
