--- a/src/main/webapp/i18n/fr/application.json
+++ b/src/main/webapp/i18n/fr/application.json
@@ -7,11 +7,13 @@
 				"created": {
 					"premiere.sejour_etudiant": "Première demande de séjour étudiant - créée le {{creationDate}}",
 					"renouvellement.sejour_etudiant": "Demande de renouvellement de séjour étudiant - créée le {{creationDate}}",
+					"renouvellement.sejour_salarie": "Demande de renouvellement de séjour salarié - créée le {{creationDate}}",
 					"naturalisation.naturalisation": "Demande de naturalisation par décret - créée le {{creationDate}}"
 				},
 				"validated": {
 					"premiere.sejour_etudiant": "Première demande de séjour étudiant - validée le {{decisionDate}}",
 					"renouvellement.sejour_etudiant": "Demande de renouvellement de séjour étudiant - validée le {{decisionDate}}",
+					"renouvellement.sejour_salarie": "Demande de renouvellement de séjour salarié - validée le {{decisionDate}}",
 					"naturalisation.naturalisation": "Demande de naturalisation par décret - validée le {{decisionDate}}"
 				}
 			},
