--- a/src/main/webapp/i18n/en/project.json
+++ b/src/main/webapp/i18n/en/project.json
@@ -20,10 +20,9 @@
             
             "resources": {
             	"title": "Profesional situation",
-            	"yes": "Yes, I authorize the administration of foreigners in France to get my supporting resource directly from URSSAF. I have then no supporting piece to attach to my request.",
-            	"yes.tooltip": "...",
+            	"yes": "I authorize the administration of foreigners in France to get my supporting resource directly from URSSAF. I have then no supporting piece to attach to my request.",
             	"yes.done": "Data exchange with URSSAF authorized",
-            	"no": "No, I want to justify myself by my resources. Then I have to join my request supporting documents requested of me.",
+            	"no": "I want to justify myself by my resources. Then I have to join my request supporting documents requested of me.",
             	"workContract": "Employment contract",
             	"workContract.placeholder": "Click or drag your contract here...",
             	"workContract.tooltip": "...",
@@ -36,10 +35,9 @@
             },
             "taxSituation": {
             	"title": "Tax situation",
-            	"yes": "Yes, I authorize the administration of foreigners in France to recover my tax receipts directly from the Public Finance. I have then no supporting piece to attach to my request.",
-            	"yes.tooltip": "...",
+            	"yes": "I authorize the administration of foreigners in France to recover my tax receipts directly from the Public Finance. I have then no supporting piece to attach to my request.",
             	"yes.done": "Data exchange with Public Finance authorized",
-            	"no": "No, I want to justify my tax situation without allowing sharing my information with the Ministry of Finance. Then I have to join my request supporting documents requested of me.",
+            	"no": "I want to justify my tax situation without allowing sharing my information with the Ministry of Finance. Then I have to join my request supporting documents requested of me.",
             	"taxSlip": "Tax situation slip",
             	"taxSlip.placeholder": "Click or drag your slip here...",
             	"taxSlip.tooltip": "recent P237 tax situation slip on the imposition of the past three years",
