--- a/src/main/webapp/i18n/fr/validation.json
+++ b/src/main/webapp/i18n/fr/validation.json
@@ -14,8 +14,9 @@
 	    	"family": "Identité des proches parents",
 	    	"preinscription": "(Pré) inscription confirmée le {{confirmationDate}} - {{confirmationAuthor}}",
 	    	"policeControl": "Contrôle sécuritaire",
-	    	"history": "Historique SIEF",
-	    	"history.list": "Droit au séjour \"étudiant\" - du {{startDate}} au {{endDate}}",
+	    	"history": "Historique SI EF",
+	    	"history.list.sejour_etudiant": "Droit au séjour \"étudiant\" - du {{startDate}} au {{endDate}}",
+	    	"history.list.sejour_salarie": "Droit au séjour \"salarié\" - du {{startDate}} au {{endDate}}",
 	    	"noHistory": "Pas d'historique",
 	    	
 	    	"validate": "Validé le {{validationDate}} - {{validationAuthor}}"
