suppression de la double instruction pour la naturalisation

--- a/src/main/webapp/i18n/en/naturalisation.json
+++ b/src/main/webapp/i18n/en/naturalisation.json
@@ -53,10 +53,8 @@
 		"form": {
 			"project": "Project",
 			"button": {
-	    		"accept": "Favorable proposal",
-	    		"decline": "Unfavorable decision",
-		    	"confirm": "Confirm favorable proposal",
-		    	"cancel": "Cancel favorable decision"
+	    		"accept": "Favorable decision",
+	    		"decline": "Unfavorable decision"
 	    	}
 	    }
 	}
