--- a/src/main/webapp/i18n/fr/naturalisation.json
+++ b/src/main/webapp/i18n/fr/naturalisation.json
@@ -53,10 +53,8 @@
 		"form": {
 			"project": "Projet de naturalisation",
 			"button": {
-	    		"accept": "Proposition favorable",
-		    	"decline": "Décision défavorable",
-		    	"confirm": "Confirmer la proposition favorable",
-		    	"cancel": "Infirmer la proposition favorable"
+	    		"accept": "Décision favorable",
+		    	"decline": "Décision défavorable"
 	    	}
 	    }
 	}
