--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -12,53 +12,69 @@ email.activation.link=Activer votre compte
 
 email.payment.title=Confirmation du d\u00e9p\u00f4t de votre demande
 email.payment.greeting=Bonjour {0} {1},
-email.payment.done=Nous accusons r\u00e9ception de votre demande d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {0} \u00e0 {1}.
-email.payment.next=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande. Si votre dossier n\u2019est pas recevable, nous vous en indiquerons les raisons et vous pr\u00e9ciserons le(s) \u00e9l\u00e9ment(s) manquant(s) le cas \u00e9ch\u00e9ant.
+email.payment.done.sejour_etudiant=Nous accusons r\u00e9ception de votre demande de s\u00e9jour \u00e9tudiant, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
+email.payment.done.naturalisation=Nous accusons r\u00e9ception de votre demande de naturalisation, n\u00B0{0}, d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {1} \u00e0 {2}.
+email.payment.admissible=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande.
+email.payment.inadmissible=Si votre dossier n\u2019est pas recevable, nous vous en indiquerons les raisons et vous pr\u00e9ciserons le(s) \u00e9l\u00e9ment(s) manquant(s) le cas \u00e9ch\u00e9ant.
 
 email.admissibility.title=Validation de la recevabilit\u00e9 de votre demande
 email.admissibility.greeting=Bonjour {0} {1},
-email.admissibility.text1=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable.
-email.admissibility.text2=Pour finaliser le d\u00e9p\u00f4t de votre demande, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 prendre rendez-vous \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul en cliquant sur le lien ci-dessous :
+email.admissibility.ok.sejour_etudiant=Votre demande de s\u00e9jour \u00e9tudiant, n\u00B0{0}, a \u00e9t\u00e9 jug\u00e9e recevable.
+email.admissibility.ok.naturalisation=Votre demande de naturalisation, n\u00B0{0}, a \u00e9t\u00e9 jug\u00e9e recevable.
+email.admissibility.ok.renewal=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Nous vous recontacterons d\u00e8s que celle-ci aura \u00e9t\u00e9 instruite.
+email.admissibility.rdv=Pour finaliser le d\u00e9p\u00f4t de votre demande, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 prendre rendez-vous en cliquant sur le lien ci-dessous :
 email.admissibility.link=Prendre rendez-vous
-email.admissibility.renewal.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Nous vous recontacterons d\u00e8s que celle-ci aura \u00e9t\u00e9 instruite.
-
-email.decision.title=D\u00e9cision favorable pour votre demande de s\u00e9jour \u00e9tudiant
-email.decision.greeting=Bonjour {0} {1},
-email.decision.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 accept\u00e9e. Votre titre de s\u00e9jour est en cours de fabrication. Nous vous recontacterons d\u00e8s qu\u2019il sera disponible \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul.
-email.decision.renewal.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 accept\u00e9e. Votre titre de s\u00e9jour est en cours de fabrication. Nous vous recontacterons d\u00e8s qu\u2019il sera disponible.
-
-email.permit.title=Disponibilit\u00e9 de votre carte de s\u00e9jour \u00e9tudiant
-email.permit.greeting=Bonjour {0} {1},
-email.permit.text1=Votre titre de s\u00e9jour \u00e9tudiant est disponible \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul. Pour le r\u00e9cup\u00e9rer nous vous invitons \u00e0 vous pr\u00e9senter d\u00e8s \u00e0 pr\u00e9sent et sans rendez-vous \u00e0 l\u2019accueil de l\u2019Ambassade muni de votre pi\u00e8ce d\u2019identit\u00e9 :
-email.permit.text2=43-12 Seosomun-ro, Seodaemun-gu - SEOUL 03741 (120-030)
-email.permit.text3=Pour acc\u00e9der aux meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, vous devrez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
-email.permit.link=Confirmer mon arriv\u00e9e en France
-
-email.permit.renewal.text=Votre titre de s\u00e9jour \u00e9tudiant est disponible. Pour le r\u00e9cup\u00e9rer nous vous invitons \u00e0 vous pr\u00e9senter d\u00e8s \u00e0 pr\u00e9sent et sans rendez-vous \u00e0 XXX muni de votre pi\u00e8ce d\u2019identit\u00e9.
-
-email.arrival.title=Confirmation de votre arriv\u00e9e en France
-email.arrival.greeting=Bonjour {0} {1},
-email.arrival.text1=Nous esp\u00e9rons que votre installation en France se passe bien.
-email.arrival.text2=Pour acc\u00e9der aux meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, nous vous rappelons que vous devez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
-email.arrival.link=Confirmer mon arriv\u00e9e en France
-
-email.renewal.title=Renouvellement de votre droit au s\u00e9jour
-email.renewal.greeting=Bonjour {0} {1},
-email.renewal.text=Votre titre de s\u00e9jour arrive \u00e0 expiration dans deux mois. Si vous souhaitez prolonger votre s\u00e9jour en France, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 d\u00e9poser votre demande de renouvellement en ligne \u00e0 l\u2019aide du lien ci-dessous :
-email.renewal.link=Prolonger mon s\u00e9jour en France
 
 email.rdv.title=Confirmation de votre rendez-vous
 email.rdv.greeting=Bonjour {0} {1},
-email.rdv.text=Nous vous confirmons votre rendez-vous le {0} \u00e0 {1} \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul. Merci de vous pr\u00e9senter \u00e0 l\u2019accueil \u00e0 l\u2019heure dite, muni de votre passeport et de vos documents d\u2019\u00e9tat-civil originaux.
-email.rdv.ambassy=Ambassade de France \u00e0 S\u00e9oul :
-email.rdv.street=43-12 Seosomun-ro,
-email.rdv.complement=Seodaemun-gu
-email.rdv.city=SEOUL 03741 (120-030)
-email.rdv.phone=T\u00e9l  : (82-2) 3149 4300
-email.rdv.access=M\u00e9tro Chungjeogno, Sortie 3
+email.rdv.confirmed=Nous vous confirmons votre rendez-vous le {0} \u00e0 {1} \u00e0 l\u2019adresse ci-dessous. Merci de vous pr\u00e9senter \u00e0 l\u2019accueil \u00e0 l\u2019heure dite, muni(e) de votre passeport et de vos documents d\u2019\u00e9tat-civil originaux.
+email.rdv.name.sejour_etudiant=Ambassade de France \u00e0 S\u00e9oul
+email.rdv.name.naturalisation=Pr\u00e9fecture de Seine-Saint-Denis - Bureau des naturalisations
+email.rdv.street.sejour_etudiant=43-12 Seosomun-ro, Seodaemun-gu,
+email.rdv.street.naturalisation=1 Esplanade Jean Moulin,
+email.rdv.city.sejour_etudiant=SEOUL 03741 (120-030)
+email.rdv.city.naturalisation=93007 Bobigny
+email.rdv.phone.sejour_etudiant=T\u00e9l  : (82-2) 3149 4300
+email.rdv.phone.naturalisation=T\u00e9l  : +33 1 41 60 60 60
+email.rdv.delay=Vous pouvez modifier \u00e0 votre convenance votre cr\u00e9neau de rendez-vous dans un d\u00e9lai de 1 jour avant le rendez-vous confirm\u00e9. Pass\u00e9 ce d\u00e9lai, un justificatif vous sera demand\u00e9 pour modifier ou annuler votre rendez-vous. De m\u00eame, toute absence au rendez-vous devra \u00eatre justifi\u00e9e.
+email.rdv.modifiable=Pour modifier votre rendez-vous, cliquez sur le lien suivant :
+email.rdv.link=Modifier mon rendez-vous
+
+email.decision.title=D\u00e9cision favorable
+email.decision.greeting=Bonjour {0} {1},
+email.decision.ok.sejour_etudiant=Votre demande de s\u00e9jour \u00e9tudiant, n\u00B0{0}, a \u00e9t\u00e9 accept\u00e9e.
+email.decision.ok.naturalisation=Votre demande de naturalisation, n\u00B0{0}, a \u00e9t\u00e9 accept\u00e9e.
+email.decision.permit=Les documents sont en cours de fabrication. Nous vous recontacterons d\u00e8s qu\u2019ils seront disponibles.
+
+email.permit.title=Disponibilit\u00e9 de votre titre
+email.permit.greeting=Bonjour {0} {1},
+email.permit.dispo=Votre titre de s\u00e9jour est disponible. Pour le r\u00e9cup\u00e9rer nous vous invitons \u00e0 vous pr\u00e9senter d\u00e8s \u00e0 pr\u00e9sent et sans rendez-vous \u00e0 l\u2019accueil de l\u2019adresse ci-dessous, muni(e) de votre pi\u00e8ce d\u2019identit\u00e9 :
+email.permit.address=Ambassade de France \u00e0 S\u00e9oul - 43-12 Seosomun-ro, Seodaemun-gu - SEOUL 03741 (120-030)
+email.permit.address.renewal=Pr\u00e9fecture de Seine-Saint-Denis - Bureau des naturalisations - 1 Esplanade Jean Moulin, 93007 Bobigny
+email.permit.arrival=Pour acc\u00e9der aux meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, vous devrez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
+email.permit.link=Confirmer mon arriv\u00e9e en France
+
+email.ceremony.title=Invitation \u00e0 la c\u00e9r\u00e9monie d\u2019accueil dans la nationalit\u00e9 fran\u00e7aise
+email.ceremony.greeting=Bonjour {0} {1},
+email.ceremony.dispo=Vous \u00eates convi\u00e9(e) \u00e0 la c\u00e9r\u00e9monie d\u2019accueil dans la nationalit\u00e9 fran\u00e7aise du {0}, \u00e0 {1}, \u00e0 l\u2019adresse ci-dessous. Nous vous invitons \u00e0 vous y pr\u00e9senter muni(e) de votre pi\u00e8ce d\u2019identit\u00e9.
+email.ceremony.address=Pr\u00e9fecture de Seine-Saint-Denis - Bureau des naturalisations - 1 Esplanade Jean Moulin, 93007 Bobigny
+email.ceremony.act=Lors de cette c\u00e9r\u00e9monie vous seront remis vos actes d\u2019\u00e9tat civil \u00e9tablis par le service central de l\u2019\u00e9tat civil et l\u2019ampliation du d\u00e9cret de naturalisation.
+
+email.arrival.title=Confirmation de votre arriv\u00e9e en France
+email.arrival.greeting=Bonjour {0} {1},
+email.arrival.ok=Nous esp\u00e9rons que votre installation en France se passe bien.
+email.arrival.service=Pour acc\u00e9der aux meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, nous vous rappelons que vous devez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
+email.arrival.link=Confirmer mon arriv\u00e9e en France
+
+email.renewal.title=Arriv\u00e9e \u00e0 \u00e9ch\u00e9ance de votre titre
+email.renewal.greeting=Bonjour {0} {1},
+email.renewal.text=Votre titre arrive \u00e0 expiration dans deux mois. Si vous le souhaitez, vous pouvez d\u00e9poser une demande de renouvellement en cliquant sur le lien ci-dessous :
+email.renewal.link=Demande de renouvellement
+email.renewal.end=Si vous ne souhaitez pas renouveler votre titre, nous esp\u00e9rons que vous avez appr\u00e9ci\u00e9 votre s\u00e9jour en France.
 
 email.regards=Cordialement,
-email.signature=L\u2019\u00e9quipe S\u00e9jour.
+email.signature.sejour_etudiant=L\u2019\u00e9quipe S\u00e9jour.
+email.signature.naturalisation=L\u2019\u00e9quipe Naturalisation.
 email.signature.administration=Administration des Etrangers en France
 
 # Reset e-mail
