--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -52,6 +52,7 @@
         	"start": "Démarrer",
         	"continue": "Continuer",
         	"back": "Retour",
+	    	"report": "Signaler un changement",
         	"validate": "Valider ma demande",
         	"payment": "Valider le paiement",
         	"end": "Terminer"
