correction pb sur les rôles

--- a/src/main/webapp/i18n/en/error.json
+++ b/src/main/webapp/i18n/en/error.json
@@ -1,6 +1,6 @@
 {
     "error": {
-        "title": "Error page!",
+        "title": "Oups!",
         "403": "You are not authorized to access the page."
     }
 }
