--- a/src/main/webapp/i18n/en/renouveler.json
+++ b/src/main/webapp/i18n/en/renouveler.json
@@ -29,7 +29,7 @@
         	"step.short": "Payment",
         	"step.long": "Pre-pay your residency taxes"
         },
-        "preparationText": "<p>To complete your application, you must be in possession :</p><ul><li>a certificate of registration or pre-enrollment in a French school,</li><li>proof of sufficient financial resources, or greater than or equal to 615 € monthly (grant certificate, bank statement, pay stubs or proof of support by a guarantor),</li><li>in case of change of civil status , a valid passport and an extract of your birth certificate with filiation or a full copy of your birth certificate,</li><li>in case of change of address, proof of address,</li></ul><p>All supporting documents must be accompanied, where appropriate, a translation into French by a certified translator interpreter near an appellate court.</p><p><a href='#'>Find a certified translator interpreter</a></p>"
+        "preparationText": "<p>To complete your application, you must be in possession :</p><ul><li>a certificate of registration or pre-enrollment in a French school,</li><li>proof of sufficient financial resources, or greater than or equal to 615 € monthly (grant certificate, bank statement, pay stubs or proof of support by a guarantor),</li><li>in case of change of civil status , a valid passport and an extract of your birth certificate with filiation or a full copy of your birth certificate,</li><li>in case of change of address, proof of address,</li></ul><p>All supporting documents must be accompanied, where appropriate, a translation into French by a certified translator interpreter.</p><p><a href='#'>Find a certified translator interpreter</a></p>"
     },
     "summary": {
     	"form": {
